--- a/less/typography.less
+++ b/less/typography.less
@@ -37,25 +37,25 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-.atk-size-zetta {
+.atk-size-exa {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*7);
 }
-.atk-size-exa {
+.atk-size-peta {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*6);
 }
-h1, .atk-size-peta {
+h1, .atk-size-tera {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*5);
 }
-h2, .atk-size-tera {
+h2, .atk-size-giga {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*4);
 }
-h3, .atk-size-giga {
+h3, .atk-size-mega {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*3);
 }
-h4, .atk-size-mega {
+h4, .atk-size-kilo {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*2);
 }
-h5, .atk-size-kilo {
+h5, .atk-size-reset {
     font-size: @bodySize;
 }
 h6, small, .atk-size-milli {
@@ -121,7 +121,7 @@ ul, ol {
 
 
 // ==========================================================
-// Other elements (Needs tobe reviewed)
+// Other elements (Needs to be reviewed)
 // ==========================================================
 
 p {
