--- a/less/forms.less
+++ b/less/forms.less
@@ -2,6 +2,7 @@
 // Forms
 // ==========================================================
 
+// Basic Fields
 input[readonly],
 div.atk-form-field-readonly {
     background: @bodyColor;
@@ -10,11 +11,6 @@ fieldset {
     border: none;
     margin: 0;
     padding: 0;
-}
-label {
-    font-weight: bold;
-    // padding: @margin/4 0;
-    // margin-top: 1px;
 }
 input[type="text"],
 input[type="url"],
@@ -33,6 +29,7 @@ textarea {
     background: #fff;
     border: 1px solid @borderClickable;
     border-radius: @cornerRadius;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.03) inset;
     line-height: @bodyBaseline;
     padding: 0.5em 0.7em;
 }
@@ -44,10 +41,8 @@ input[type=checkbox] {
     line-height: @bodyBaseline;
 }
 input[type=file], select {
-    margin: @margin/2 0 @margin/2 0;
+    margin: 0.5em 0 0 0;
 }
-
-// Focused State
 button::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
@@ -65,67 +60,140 @@ textarea:focus {
 }
 
 
-// New Forms
+// Advanced Fields
+.atk-input-icon {
+    display: inline-block;
+    position: relative;
+    input {
+        padding-right: 1.4em;
+    }
+    *[class*=icon] {
+        .position(@t:50%, @r:0.5em);
+        line-height: 1;
+        margin-top: -0.5em;
+        &:before {
+            margin: 0;
+        }
+    }
+}
+.atk-input-combo.atk-cells {
+    .atk-cell {
+        * {
+            .border-radius(0);
+        }
+        &:first-child * {
+            .border-left-radius(@cornerRadius);
+            &.atk-button {
+                border-right: none;
+            }
+        }
+        &:last-child * {
+            .border-right-radius(@cornerRadius);
+        }
+        +.atk-cell {
+            .atk-button {
+                border-left: none;
+            }
+        }
+    }
+}
+.atk-input-radio {
+    padding-top: 0.5em;
+    .atk-form-stacked &, &.atk-input-radio-stacked {
+        padding-top: 0;
+    }
+    span {
+        display: inline-block;
+        margin-right: 1em;
+        // white-space: nowrap;
+        label {
+            margin-left: 0.35em;
+        }
+        input {
+            .position(relative, -0.05em);
+        }
+    }
+    &.atk-input-radio-stacked {
+        span {
+            display: block;
+        }
+    }
+}
+
+
+// Form Classes
 .atk-form {
     form {
         display: table;
-        .atk-cells {
-            display: table-row;
-            >.atk-cell {
-                padding-bottom: @margin;
-                vertical-align: top;
-                label {
-                    margin: 0.5em 0;
-                }
-                input[type=text]:not([class*="span"]),
-                input[type=password]:not([class*="span"]),
-                input[readonly]:not([class*="span"]),
-                textarea:not([class*="span"]),
-                div.atk-form-field-readonly:not([class*="span"]),
-                select,
-                .ui-selectmenu-button,
-                .atk-input-icon {
-                    width: 100% !important;
-                }
-                input + input { margin-left: 0.3em; }
-                &:first-child label {
-                    display: inline-block;
-                }
-            }
-        }
         .atk-form-fieldset {
             display: table-row-group;
+            >.atk-cells {
+                >.atk-cell {
+                    padding-bottom: @margin;
+                    vertical-align: top;
+                    input[type=text]:not([class*="span"]),
+                    input[type=password]:not([class*="span"]),
+                    input[readonly]:not([class*="span"]),
+                    textarea:not([class*="span"]),
+                    div.atk-form-field-readonly:not([class*="span"]),
+                    select,
+                    .ui-selectmenu-button,
+                    .atk-input-icon {
+                        width: 100% !important;
+                    }
+                    p {
+                        margin: @margin/4 0 0 0;
+                    }
+                    &:first-child label {
+                        display: inline-block;
+                        font-weight: bold;
+                        margin: 0.5em 0;
+                    }
+                }
+                &.atk-form-error {
+                    label {
+                        color: @effectDanger;
+                    }
+                    input, textarea {
+                        border-color: @effectDanger;
+                    }
+                }
+            }
+            >.atk-cells, +.atk-cells {
+                display: table-row;
+            }
         }
-        >.atk-cells:last-child .atk-cell {
-            padding-bottom: 0;
+        >.atk-actions {
+            hr {
+                margin-top: 0;
+                + * {
+                    margin-left: 0;
+                }
+            }
         }
     }
 }
 .atk-form-compact {
-    &.atk-form, .atk-form & {
-        .atk-cells>.atk-cell {
-            &, form & {
-                padding-bottom: @margin/2;
-            }
-        }
-        form>.atk-cells:last-child .atk-cell {
-            padding-bottom: 0;
-        }
+    form .atk-form-fieldset>.atk-cells>.atk-cell,
+    &.atk-form-fieldset>.atk-cells>.atk-cell {
+        padding-bottom: @margin/2;
     }
 }
 .atk-form-stacked {
-    &.atk-form {
-        .atk-cells, .atk-cell, form, .atk-form-fieldset {
-            display: block;
-        }
+    form,
+    form .atk-form-fieldset,
+    form .atk-form-fieldset>.atk-cells,
+    form .atk-form-fieldset>.atk-cells>.atk-cell,
+    &.atk-form-fieldset,
+    &.atk-form-fieldset>.atk-cells,
+    &.atk-form-fieldset>.atk-cells>.atk-cell {
+        display: block !important;
     }
-    .atk-cells {
-        .atk-cell {
-            &:first-child {
-                padding-bottom: 0;
-                label {
-                    margin-top: 0;
-                }
+    form .atk-form-fieldset, &.atk-form-fieldset {
+        >.atk-cells>.atk-cell:first-child {
+            padding-bottom: 0;
+            label {
+                margin-top: 0;
             }
         }
     }
@@ -136,242 +204,5 @@ textarea:focus {
     }
     .atk-form-fieldset {
         display: table;
-        &.atk-form-stacked {
-            &, .atk-cells, .atk-cell {
-                display: block;
-            }
-        }
     }
 }
-
-
-
-// ATK form
-// ----------------------------------------------
-/*
-.atk-form-old {
-    margin-bottom: @margin;
-    .atk-form-row + .atk-form-row {
-        margin-top: @margin;
-    }
-    fieldset {
-        legend {
-            border: 0;
-            border-bottom: 1px solid #e5e5e5;
-            color: #333333;
-            padding: 0;
-            margin: 0 0 @margin/2 0;
-            width: 100%;
-            display: block;
-            .atk-size-kilo;
-        }
-        .atk-form-row {
-            .clear-fix();
-            > label {
-                width: 7em;
-                float: left;
-            }
-            > .atk-form-field {
-                margin-left: 7em + 2em;
-                input[type=text]:not([class*="span"]),
-                input[type=password]:not([class*="span"]),
-                input[readonly]:not([class*="span"]),
-                textarea:not([class*="span"]),
-                div.atk-form-field-readonly:not([class*="span"]),
-                select { width: 100%; }
-                input + input { margin-left: @margin/4; }
-                ins {
-                    text-decoration: none;
-                    color: @bodyColor;
-                    display: block;
-                    margin-top: @margin/3;
-                }
-                .atk-form-error {
-                    color: red;
-                    margin-top: @margin/3;
-                }
-            }
-            &.has-error {
-                > label { color: red; }
-                input { border-color: red; }
-            }
-            + *[class*=span] {
-                margin-top: 0;
-            }
-        }
-        &[class*=span] + fieldset[class*=span] + .atk-actions {
-            border: none;
-            padding-left: 0;
-            margin: 0;
-            &:before {
-                .atk-actions;
-                margin-top: 0;
-                content: '';
-                display: block;
-            }
-        }
-        + fieldset {
-                margin-top: @margin;
-                padding-top: @margin;
-                border-top: 1px solid @borderStatic;
-        }
-    }
-    .atk-actions { border-top: 1px solid @borderStatic; margin-top: @margin; padding-top: @margin; }
-    .atk-actions, .legend { padding-left: 7em + 7em; }
-
-    // Stacked form
-    &.stacked { 
-        fieldset {
-            .atk-form-row {
-                > label {
-                    margin-bottom: @margin/6;
-                    padding: 0;
-                    width: auto;
-                    display: block;
-                    float: none;
-                }
-                > .atk-form-field { margin-left: 0; }
-                .atk-form-options {
-                    padding: 0;
-                }
-            }
-        }
-        .atk-actions[class*=span] {
-            padding-top: @margin + @margin/6 !important;
-        }
-        .atk-actions, .legend { padding-left: 0; }
-    }
-    // Stacked form
-    &.atk-form-compact {
-      fieldset {
-        margin-bottom: 0;
-        .atk-form-row + .atk-form-row {
-          margin-top: @margin/4;
-        }
-        label {
-          display: none !important;
-        }
-      }
-      .atk-actions {
-        border: none;
-        margin-top: @margin/4;
-        padding: 0;
-        .atk-button {
-          width: 100%;
-        }
-      }
-    }
-    // Inline form
-    &.row {
-        fieldset {
-            padding-top: 0;
-            margin-top: 0;
-            border: none;
-            &[class*=span] {
-                > *[class*=span] {
-                    margin-top: 0;
-                }
-                +.atk-actions[class*=span] {
-                    border: none;
-                    margin-top: 0;
-                    padding: 0;
-                    text-align: left;
-                    clear: none;
-                }
-            }
-        }
-        .atk-actions { clear: both; text-align: right; }
-    }
-    // Form with wide labels
-    &.wider-labels {
-        fieldset {
-            // legend {
-            //     text-indent: 7em*1.6 + 7em;
-            // }
-            .atk-form-row {
-                > label { width: 7em + (7em*0.6); float: left; }
-                > .atk-form-field { margin-left: 7em + (7em*0.6) + 7em; }
-            }
-        }
-        &.stacked {
-            fieldset .atk-form-row {
-                > label { width: auto; float: none; }
-                > .atk-form-field { margin-left: 0; }
-            }
-        }
-        .atk-actions, .legend { padding-left: 7em + (7em*0.6) + 7em; }
-    }
-    // Form with right aligned labels
-    &.labels-right fieldset .atk-form-row > label { text-align: right; }
-}
-
-// ATK form fields
-// ----------------------------------------------
-.atk-form-old {
-    ul.atk-form-options {
-        list-style-type: none;
-        margin: 0;
-        padding: @margin/4 0;
-        li {
-            margin: 0;
-            label {
-                font-weight: normal;
-            }
-            input {margin-right: @margin/4;}
-        }
-        &.stacked {
-            li {
-                display: block;
-            }
-        }
-    }
-}
-
-// ATK form row ??? really ???
-// ----------------------------------------------
-.input-row {
-    display: table;
-    .input-cell {
-        display: table-cell;
-        vertical-align: middle;
-        &.expanded {
-            width: 100%;
-            line-height: @bodyBaseline;
-            &:first-child input {
-                .border-right-radius(0);
-            }
-            +.input-cell .ui-button {
-                .border-left-radius(0);
-                margin-left: -1px;
-            }
-            input { width: 100%; }
-        }
-        &:first-child:not(.expanded) {
-            .ui-button {
-                .border-right-radius(0);
-                margin-right: -1px;
-            }
-            +.expanded input {
-                .border-left-radius(0);
-            }
-        }
-        .ui-buttonset { white-space: nowrap; }
-        > .ui-button { margin-left: 0; margin-right: 0; }
-        .ui-button * { line-height: normal; }
-    }
-}
-
-
-// New Forms
-
-.atk-form-field {
-    .clear-font;
-    * {
-        font-size: @bodySize;
-        line-height: @bodyBaseline;
-    }
-    .ui-selectmenu-button {
-        width: 100% !important;
-    }
-}
-*/
