--- a/less/variables.less
+++ b/less/variables.less
@@ -30,34 +30,36 @@
 // ==========================================================
 
 @linkColor:            darken(@atk-swatch-blue,10%);
-@linkColorHover:       red;
+@linkColorHover:       darken(@linkColor,10%);
 
-@textSelect:           @atk-swatch-ink; // Text selection's background color
+@textSelect:           @atk-swatch-ink; // Text selection's color
 
 @borderStatic:         #e1e1e1;
-@borderClickable:      #c1c1c1;
+@borderClickable:      darken(@borderStatic, 10%);
 @borderOverlay:        darken(@borderStatic, 25%);
 
-@stateDefault:         #fff;
-@stateHover:           #f5f5f5;
-@stateActive:          #eee;
+@formMandatory:        #ff0000;
 
 @colorFocus:           @atk-swatch-blue; // (!)
 @colorLight:           #fff; // (!)
 @colorDark:            #000; // (!)
 
-@atk-swatch-gray:	   #e6f2ec;		.createSwatch(atk-swatch-gray);
+@stateDefault:         #fff;
+@stateHover:           #f5f5f5;
+@stateActive:          #eee;
+
+@atk-swatch-gray:	   #f5f6f7;		.createSwatch(atk-swatch-gray);
 @atk-swatch-ink:       #1c2933;		.createSwatch(atk-swatch-ink);
 @atk-swatch-yellow:	   #ffcc00;		.createSwatch(atk-swatch-yellow);
+@atk-swatch-red:	   #f9451f;		.createSwatch(atk-swatch-red);
 @atk-swatch-green:     #00cc66;		.createSwatch(atk-swatch-green);
 @atk-swatch-blue:      #0095ff;		.createSwatch(atk-swatch-blue);
-
 @swatchText:           50%; // If swatch's lightness is more than 50% then text goes dark
 
-@effectSuccess:        #ccffdb;
-@effectWarning:        #fcffcc;
-@effectDanger:         #ffcccc;
-@effectInfo:           #cceeff;
+@effectSuccess:        #25c425;
+@effectWarning:        #f7a600;
+@effectDanger:         #ff2d1a;
+@effectInfo:           #02aae2;
 
 
 // ==========================================================
