Now cwitching style will always reload it.

--- a/playground/css/style-compact.less
+++ b/playground/css/style-compact.less
@@ -1,4 +1,4 @@
 @import '../../framework/css/agiletoolkit.less';
 @import 'playground.less';
 
-@margin:               3px;
+@margin:               0.5rem * @bodyBaseline;
