Changes in playground.
Fixed Shapes and Media Blocks examples so they would display properly
on ipad.

--- a/playground/css/playground.less
+++ b/playground/css/playground.less
@@ -26,8 +26,11 @@ section {
 }
 #example-styling-shapes {
 	.atk-padding {
-		height: 200px;
-		width: 200px; 
+		height: 100px;
+		width: 100%;
+		&.atk-shape-circle {
+			width: 100px;
+		}
 	}
 }
 #example-icons {
@@ -36,5 +39,11 @@ section {
 	}
 	#toggler {
 		display: block;
+	}
+}
+
+#example-widgets-mediablocks {
+	img {
+		height: 100px;
 	}
 }
