Added @siteMinWidth variable.

--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -6,7 +6,7 @@
 @margin:               1rem * @bodyBaseline;
 @cornerRadius:         5px;
 @siteWidth:            100%;
-
+@siteMinWidth:         960px;
 
 // ==========================================================
 // Typography
