--- a/playground/css/style-compact.less
+++ b/playground/css/style-compact.less
@@ -1,4 +1,5 @@
 @import '../../framework/css/agiletoolkit.less';
 @import 'playground.less';
 
-@margin:               0.5rem * @bodyBaseline;
+@bodySize:             0.8rem;
+@bodyBaseline:         1.4;
