--- a/framework/less/mixins.less
+++ b/framework/less/mixins.less
@@ -112,6 +112,16 @@
   }
 }
 
+// Disable Text Selection Highlight
+.disableTextHighlight() {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 
 // CSS3 PROPERTIES
 // --------------------------------------------------------
