Styled properly all 3 themes. Updated playground. Removed few obsolete components.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -2,6 +2,7 @@
 // Components
 // ==========================================================
 
+// Text
 .atk-text-dimmed {
     color: lighten(@bodyColor, 40%);
 }
@@ -12,6 +13,7 @@
     .clear-font;
 }
 
+// Pushes
 .atk-push-small {
     margin-bottom: @margin/2;
     &:last-child {
@@ -31,6 +33,7 @@
     }
 }
 
+// Paddings
 .atk-padding-small {
     padding: @margin/2;
 }
@@ -44,6 +47,7 @@
     padding: 0;
 }
 
+// Sections
 .atk-section-small {
     padding: @margin/2 0;
 }
@@ -54,16 +58,11 @@
     padding: @margin*2 0;
 }
 
-.atk-wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    width: @siteWidth !important;
-}
-
+// Item List
 .atk-actions {
     >* {
         + * {
-            margin-left: 0.5em;
+            margin-left: (0.5em * @baselineDestroyer);
         }
         &.atk-sep + * {
             margin-left: 0;
@@ -75,6 +74,12 @@
     margin-right: @margin/3 !important;
 }
 
+// Layout
+.atk-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: @siteWidth !important;
+}
 .atk-cells {
     display:table;
     width: 100%;
@@ -83,16 +88,17 @@
         vertical-align: middle;
     }
     &.atk-cells-gutter-large>.atk-cell + .atk-cell {
-        padding-left: 2em;
+        padding-left: (2em * @baselineDestroyer);
     }
     &.atk-cells-gutter>.atk-cell + .atk-cell {
-        padding-left: 1em;
+        padding-left: (1em * @baselineDestroyer);
     }
     &.atk-cells-gutter-small>.atk-cell + .atk-cell {
-        padding-left: 0.5em;
+        padding-left: (0.5em * @baselineDestroyer);
     }
 }
 
+// Buttons
 a,
 a:link,
 a:visited,
@@ -105,7 +111,7 @@ input[type=submit] {
         display: inline-block;
         font-weight: bold;
         line-height: @bodyBaseline;
-        padding: 0.5em 1em;
+        padding: (0.5em * @baselineDestroyer) (1em * @baselineDestroyer);
         &:hover {
             .stateHover;
         }
@@ -132,6 +138,7 @@ input[type=submit] {
     color: #fff !important;
 }
 
+// Box
 *[class*=atk-box] {
     &, &[class*=span] {
         .border-radius(@cornerRadius);
@@ -156,28 +163,25 @@ input[type=submit] {
     }
 }
 
+// Label
 .atk-label {
     .border-radius(@cornerRadius);
     font-weight: bold;
-    padding: 0.2em 0.4em;
+    padding: (0.2em * @baselineDestroyer) (0.4em * @baselineDestroyer);
 }
 
+// Helpers
 .atk-inline {
     display: inline-block;
 }
-
-
-// Helpers
 .atk-jackscrew {
     width: 100%;
 }
-
-// Clearers
 .atk-clear-fix {
     .clear-fix;
 }
 
-// Object Positioning
+// Positioning
 .atk-move-left {
     float: left;
 }
@@ -192,7 +196,7 @@ input[type=submit] {
     float: right;
 }
 
-// Horizontal Alignment
+// Alignment
 .atk-align-left {
     text-align: left;
 }
@@ -203,7 +207,6 @@ input[type=submit] {
     text-align: center;
 }
 
-// Vertical Alignment
 .atk-valign-top {
     vertical-align: top !important;
 }
@@ -216,7 +219,6 @@ input[type=submit] {
 .atk-valign-bottom {
     vertical-align: bottom !important;
 }
-
 
 // Shapes
 .atk-shape-rectangle {
@@ -232,31 +234,6 @@ input[type=submit] {
         .border-radius(50%);
     }
 }
-// .atk-shape-diamond {
-//     &, img& {
-//         .rotate(-45deg);
-//         .transform-origin(50% 50%)
-//     }
-// }
-
-
-// States
-.stateDefault() {
-    .box-shadow(0 1px 0 rgba(0,0,0,0.07));
-    background: @stateDefault;
-    border: 0.1em solid @borderClickable;
-    color: @bodyColor;
-}
-.stateHover() {
-    background: @stateHover;
-    border: 0.1em solid @borderClickable;
-    color: @bodyColor;
-}
-.stateActive() {
-    background: @stateActive;
-    border: 0.1em solid @borderClickable;
-    color: @bodyColor;
-}
 
 
 // ==========================================================
@@ -270,6 +247,7 @@ input[type=submit] {
   color: white;
 }
 
+// Swatches
 .createSwatch(@color) {
     .@{color} {
         &, &.atk-button[class*=atk-swatch], &.atk-label[class*=atk-swatch] {
@@ -299,6 +277,8 @@ input[type=submit] {
         }
     }
 }
+
+// Effects
 *[class*=atk-effect] {
     &, &.atk-button {
         &.atk-effect-danger {
@@ -337,4 +317,22 @@ input[type=submit] {
             border-color: @color;
         }
     }
+}
+
+// States
+.stateDefault() {
+    .box-shadow(0 1px 0 rgba(0,0,0,0.07));
+    background: @stateDefault;
+    border: 0.1em solid @borderClickable;
+    color: @bodyColor;
+}
+.stateHover() {
+    background: @stateHover;
+    border: 0.1em solid @borderClickable;
+    color: @bodyColor;
+}
+.stateActive() {
+    background: @stateActive;
+    border: 0.1em solid @borderClickable;
+    color: @bodyColor;
 }
