--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -31,7 +31,7 @@ textarea {
     border-radius: @cornerRadius;
     box-shadow: 0 3px 0 rgba(0, 0, 0, 0.03) inset;
     line-height: @bodyBaseline;
-    padding: 0.5em 0.7em;
+    padding: (0.5em * @baselineDestroyer) (0.7em * @baselineDestroyer);
 }
 textarea {
     min-height: @margin * 3 + @margin/2;
