--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -2,6 +2,7 @@
 // Widgets
 // ==========================================================
 
+// Menu
 .atk-menu {
     display: inline-block;
     &, li {
@@ -40,29 +41,6 @@
         }
     }
 }
-.atk-popover.ui-dialog {
-    border-color: @borderStatic;
-    border-radius: @cornerRadius;
-    box-shadow: 0 5px 10px fade(@colorDark,30%);
-    >.ui-dialog-titlebar {
-        display: none;
-    }
-    >.ui-dialog-content {
-        background: #fff;
-        border-radius: @cornerRadius;
-        padding: @margin/2;
-        z-index: 2;
-    }
-    .arrow.top {
-        margin-bottom: -5px;
-        z-index: 1 !important;
-        &:after {
-            background: #fff;
-            border-color: @borderStatic;
-        }
-    }
-}
-
 
 // Popover
 .atk-popover.ui-dialog {
@@ -98,11 +76,25 @@
     }
 }
 
+ // Growl 
+.atk-growl {
+    font-weight:bold;
+    position:fixed;
+    top:@margin*2;
+    right:@margin*2;
+    z-index:9999;
+    .opacity(80);
+    >div {
+        width:180px;
+        margin-top:@margin;
+        position:relative;
+        &:first-child {margin-top:0;}
+        .ui-icon-closethick {.opacity(0);@transition: opacity .2s;.transition(@transition);}
+        &:hover {.ui-icon-closethick {.opacity(100);}}
+    }
+}
 
-// ==========================================================
-// Tables
-// ==========================================================
-
+// Table
 .atk-table {
     table {
         width: 100%;
@@ -115,6 +107,8 @@
         }
     }
 }
+
+// Pagination
 .atk-pagination {
     .clear-font;
     >a {
@@ -138,131 +132,6 @@
         + a {
             border-left-width: 0;
             border-right-color: @borderStatic;
-        }
-    }
-}
-
-
- // Growl 
-.atk-growl {
-    font-weight:bold;
-    position:fixed;
-    top:@margin*2;
-    right:@margin*2;
-    z-index:9999;
-    .opacity(80);
-    >div {
-        width:180px;
-        margin-top:@margin;
-        position:relative;
-        &:first-child {margin-top:0;}
-        .ui-icon-closethick {.opacity(0);@transition: opacity .2s;.transition(@transition);}
-        &:hover {.ui-icon-closethick {.opacity(100);}}
-    }
-}
-
- // Notification 
-.atk-notification {
-    padding:@margin/2;
-    position:relative;
-    .atk-notification-text {
-        padding:0 20px;
-        >.ui-icon {position:absolute;top:@margin/1.8;left:@margin/2;}
-    }
-    >a.ui-icon-closethick {position:absolute;top:@margin/4;right:@margin/4;}
-}
-// .atk-notification {.box-shadow(0 10px 20px @white inset);}
-.atk-growl>.atk-notification {
-    @shadow: 0 5px 10px fadeout(#000,60%),0 10px 20px #fff inset;
-    .box-shadow(@shadow);
-}
-
-// Dialog Minimal
-.ui-dialog {
-    &.atk-dialog-minimal {
-        background: none;
-        border: none;
-        box-shadow: 0 0 100px rgba(0,0,0,0.25);
-        .ui-dialog-titlebar.ui-widget-header {
-            .atk-size-mega;
-            background: #fff;
-            border: none;
-            border-radius: 0;
-            color: #000;
-            font-weight: 300;
-            margin: 0;
-            padding: @margin @margin 0 @margin;
-            .ui-dialog-titlebar-close {
-                display: none;
-            }
-        }
-        .ui-dialog-content.ui-widget-content {
-            background: #fff;
-            padding: @margin/2 @margin @margin @margin;
-            p {
-                margin-bottom: @margin/1.5;
-            }
-            .atk-form {
-                fieldset {
-                    margin: 0;
-                }
-                .atk-form-row {
-                    label {
-                        display: none;
-                    }
-                    .atk-form-field input {
-                        .atk-size-kilo;
-                        background: gray;
-                        border-color: black;
-                        // margin-left: -@margin;
-                        padding: @margin/2;
-                        .placeholder(red);
-                        .transition(.3s);
-                        &:focus {
-                            background: #fff;
-                        }
-                    }
-                    + .atk-form-row {
-                        margin-top: 0;
-                        // .atk-form-field input {
-                        //  border-top: none;
-                        // }
-                    }
-                }
-                .atk-buttons {
-                    display: none;
-                }
-            }
-        }
-        .ui-dialog-buttonpane {
-            border-color: @borderClickable;
-            margin: 0;
-            padding: 0;
-            .ui-dialog-buttonset {
-                .flex;
-                float: none;
-                width: 100%;
-                .ui-button {
-                    .box-flex;
-                    .atk-size-kilo;
-                    background: none;
-                    border: none;
-                    border-radius: 0;
-                    color: red;
-                    display: block;
-                    font-weight: 300;
-                    line-height: 1;
-                    margin: 0;
-                    padding: 1em 0;
-                    text-shadow: none;
-                    &:hover {
-                        background: lighten(gray,3%);
-                    }
-                    + .ui-button {
-                        border-left: 1px solid @borderClickable;
-                    }
-                }
-            }
         }
     }
 }
