--- a/playground/css/style-compact.less
+++ b/playground/css/style-compact.less
@@ -2,4 +2,5 @@
 @import 'playground.less';
 
 @bodySize:             0.8rem;
-@bodyBaseline:         1.4;
+@bodyBaseline:         1.3;
+@baselineDestroyer:    0.7rem;
