Testing button panel.

--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -334,13 +334,9 @@ a {
         background: none;
         border:none;
         .ui-dialog-buttonset {
-            background: green;
-            .flex;
-            .ui-button {
-                .box-flex(1);
-                .clear-area;
-                background: red;
-            }
+            .atk-actions;
+            border-top: 1px solid @borderStatic;
+            padding: @margin/2;
         }
         &.ui-dialog-content {
             padding: @margin/2 @margin @margin @margin;
